--- a/mongodb-deployment.yaml
+++ b/mongodb-deployment.yaml
@@ -31,3 +31,16 @@ spec:
                 secretKeyRef:
                   name: mongodb-secret
                   value: mongodb-root-password
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: mongodb-service
+spec:
+  selector:
+    app: mongodb
+  type: ClusterIP
+  ports:
+    - protocol: TCP
+      port: 27017
+      targetPort: 27017
