--- a/mongodb-deployment.yaml
+++ b/mongodb-deployment.yaml
@@ -21,12 +21,12 @@ spec:
           ports:
             - containerPort: 27017
           env:
-            - name: MONGODB_ROOT_USERNAME
+            - name: MONGO_INITDB_ROOT_USERNAME
               valueFrom:
                 secretKeyRef:
                   name: mongodb-secret
                   value: mongodb-root-username
-            - name: MONGODB_ROOT_PASSWORD
+            - name: MONGO_INITDB_ROOT_PASSWORD
               valueFrom:
                 secretKeyRef:
                   name: mongodb-secret
