--- a/mongodb-express-deployment.yaml
+++ b/mongodb-express-deployment.yaml
@@ -21,15 +21,17 @@ spec:
             - containerPort: 8081
           env:
             - name: ME_CONFIG_MONGODB_ADMINUSERNAME
-              valueFrom:
-                secretKeyRef:
-                  name: mongodb-secret
-                  key: mongodb-root-username
+              value: dXNlcm5hbWUK
+              # valueFrom:
+              # secretKeyRef:
+              # name: mongodb-secret
+              # key: mongodb-root-username
             - name: ME_CONFIG_MONGODB_ADMINPASSWORD
-              valueFrom:
-                secretKeyRef:
-                  name: mongodb-secret
-                  key: mongodb-root-password
+              value: cGFzc3dvcmQK
+              # valueFrom:
+              # secretKeyRef:
+              # name: mongodb-secret
+              # key: mongodb-root-password
             - name: ME_CONFIG_MONGODB_SERVER
               valueFrom:
                 configMapKeyRef:
@@ -42,7 +44,7 @@ metadata:
   name: mongo-express-service
 spec:
   selector:
-    app: mongo-express
+    app: mongodb-express
   type: LoadBalancer
   ports:
     - protocol: TCP
